Changed data model for the web app and added 'Add Buyer' functionality for the seller.
